--- a/createAddress.html
+++ b/createAddress.html
@@ -18,7 +18,7 @@
     <h2>You created a new Bitcoin receiving address!</h2>
     <h1>{{address.address}}</h1>
     <h1>{{address.name}}</h1>
-
+    <a href="/wallet">Return to your wallet</a>
 
   </div>
   </div>
