new function to update balances based on received bitcoin (updated from blockchain)

--- a/home.html
+++ b/home.html
@@ -36,14 +36,13 @@
   {{header}}
   <div class="splash">
     <div class="container" style="text-shadow: 1px 1px #ffffff">
-      <br><br><br><br><br>
       <h1 id="splashText">Store your <em>bitcoin</em> worry-free.</h1>
     </div>
   </div>
   <div class="container bs-docs-container">
   <div class="bs-docs-section">
 
-    <h2>How to use this bitcoin wallet</h2>
+    <h2>How to use this Bitcoin wallet</h2>
     Secure way to store your bitcoin!
       <ul>
         <li>Easily customizable (Enter your own wardrobe items)?</li>
