--- a/wallet.html
+++ b/wallet.html
@@ -24,10 +24,13 @@
       {% for address in addresses %}
 
         <li>{{address.address}}</li>
-        {% if name %}
+        {% if address.name %}
         <li>{{address.name}}</li>
+        {% else %}
+        <li>No name</li>
         {% endif %}
         <li>{{address.balance}}</li>
+        <br>
 
       {% endfor %}
       </ul>
@@ -35,8 +38,16 @@
     <p>Warning: For security reasons, if you create a new Bitcoin receiving address using this app, no entity (not even you) will be able to access the private key associated with this address. This means you cannot use this address as a paper wallet, and you can only spend the Bitcoin received through this app with this app.</p>
     <!-- form to create new Bitcoin address (w/ optional name) !-->
     <form action="newAddress" id="createAddress">
-      <input type="text" name="name">
-      <input type="submit" id="submitButton">
+      <input type="text" name="name" placeholder="(Optional) Name of Address">
+      <input type="submit" id="submitNew" value="Create Address">
+    </form>
+    <form action="sendBitcoin" id="sendXBT">
+      <input type="text" name="sendAddr" placeholder="Bitcoin address to send to">
+      <input type="number" name="sendAmt" placeholder="Amount to send" step="0.00000001" min="0">
+      <input type="submit" id="submitSend" value="Send bitcoin!">
+    </form>
+    <form action="updateBalances" id="update">
+      <input type="submit" id="submitUpdate" value="Update Balances">
     </form>
   </div>
   </div>
