Fix transaction creation and broadcasting

--- a/home.html
+++ b/home.html
@@ -5,7 +5,6 @@
   <link rel="icon" type="image/png" href="static/favicon.png"/>
   <link rel="stylesheet" href="/static/bootstrap.min.css">
   <link rel="stylesheet" href="/static/sitestyle.css">
-  <link rel="stylesheet" href="/static/font-awesome.css">
   <script src="/static/jquery-1.11.1.min.js"></script>
   <style>
     .splash{
@@ -49,15 +48,9 @@
         <li>User Friendly?</li>
         <li>Generally Magical?</li>
       </ul>
-      <p>Fret no more, whattowear.com is here! We're happy to help you find a colour co-ordinated outfit based on next-day weather data. Just enter your closet details, and we'll figure out the rest.</p>
-      <blockquote>WhatToWear is a webapp that intelligently prepares colour co-ordinated, next-day outfits for its user based on the user's present wardrobe and local weather conditions.</blockquote>
-      Can't wait for your own, personalized, colour co-ordinated outfit of the day? Here's how!
+      <p>Fret no more, XBT wallet is here!</p>
       <ol>
         <li><a href="/Login">Sign in</a> using your google account</li>
-        <li>Enter your <a href="/createItemForm">closet details</a>
-        <li>Customize your location details in <a href="/settings">settings</a> for localized recommendations</li>
-        <li><a href="/createItemForm">Update us</a> regularly when you purchase new wardrobe items, or move around </li>
-        <li>Receive your wardrobe <a href="/outfits">recommendations!</a></li>
       </ol>
     <h3>Disclaimer</h3>
     <p>This app isn't actually magical. Python, Google App Engine, and Jinja2 only go so far, you know?</p></br></br></br></br></br></br>
