--- a/home.html
+++ b/home.html
@@ -44,7 +44,6 @@
     <h2>How to use this Bitcoin wallet</h2>
     Secure way to store your bitcoin!
       <ul>
-        <li>Easily customizable (Enter your own wardrobe items)?</li>
         <li>User Friendly?</li>
         <li>Generally Magical?</li>
       </ul>
@@ -52,8 +51,8 @@
       <ol>
         <li><a href="/Login">Sign in</a> using your google account</li>
       </ol>
-    <h3>Disclaimer</h3>
-    <p>This app isn't actually magical. Python, Google App Engine, and Jinja2 only go so far, you know?</p></br></br></br></br></br></br>
+    <h3>Created by: Liezl Puzon</h3>
+    </br></br></br></br></br></br>
   </div>
   </div>
   {{footer}}
