--- a/wallet.html
+++ b/wallet.html
@@ -14,7 +14,7 @@
   <div class="container bs-docs-container">
   <div class="bs-docs-section">
 
-    <h2>Bitcoin Wallets</h2>
+    <h2>Bitcoin Wallet</h2>
     <h1>Total balance: {{totalbal}}</h1>
     {% if not addresses %}
       <p> You don't have any Bitcoin wallet addresses to send/ receive bitcoin. Create one below! </p>
