Add timestamping to pending transactions to reflect correct balances

--- a/wallet.html
+++ b/wallet.html
@@ -37,7 +37,7 @@
     <p>Warning: For security reasons, if you create a new Bitcoin receiving address using this app, no entity (not even you) will be able to access the private key associated with this address. This means you cannot use this address as a paper wallet, and you can only spend the Bitcoin received through this app with this app.</p>
     <!-- form to create new Bitcoin address (w/ optional name) !-->
     <form action="newAddress" id="createAddress">
-      <input type="text" name="name" placeholder="(Optional) Name of Address">
+      <input type="text" name="name" placeholder="(Optional) Name">
       <input type="submit" id="submitNew" value="Create Address">
     </form>
     <form action="sendBitcoin" id="sendXBT">
